# TFG-Server_OPCUA-EPICS_PVAccess

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
IOCs/: runIOC.sh
IOCs/Ejemplo1/Ejemplo1App/Db/: PVDatabase.db
IOCs/Ejemplo1/Ejemplo1App/src/: Ejemplo1Main.cpp  Makefile
IOCs/Ejemplo1/iocBoot/iocEjemplo1/: st.cmd
IOCs/Ejemplo2/Ejemplo2App/Db/: PVDatabase.db
IOCs/Ejemplo2/Ejemplo2App/src/: Ejemplo2Main.cpp  Makefile
IOCs/Ejemplo2/configure/: RELEASE
IOCs/Ejemplo2/iocBoot/iocEjemplo2/: st.cmd
IOCs/Ejemplo3/Ejemplo3App/Db/: PVDatabase.db
IOCs/Ejemplo3/Ejemplo3App/src/: Ejemplo3Main.cpp  Makefile
IOCs/Ejemplo3/iocBoot/iocEjemplo3/: st.cmd
IOCs/Example1/Example1App/Db/: PVDatabase.db
IOCs/Example1/Example1App/src/: Example1Main.cpp  Makefile
IOCs/Example1/iocBoot/iocExample1/: st.cmd
IOCs/Example2/Example2App/Db/: PVDatabase.db
IOCs/Example2/Example2App/src/: Example2Main.cpp  Makefile
IOCs/Example2/iocBoot/iocExample2/: st.cmd
IOCs/Example3/Example3App/Db/: PVDatabase.db
IOCs/Example3/Example3App/src/: Example3Main.cpp  Makefile
IOCs/Example3/configure/: RELEASE
IOCs/Example3/iocBoot/iocExample3/: st.cmd
include/app/: EPICSClient.h  EPICStoOPCUAGateway.h  PVDiscovery.h  myNodeIOEventManager.h  opcServer.h
include/utilities/: iocBasicObject.h  opcServer.h  opcserver.h  pvNames.h  shutdown.h  typeIDs.h
src/: main.cpp
src/app/: EPICSClient.cpp  EPICStoOPCUAGateway.cpp  PVDiscovery.cpp  myNodeIOEventManager.cpp  opcServer.cpp
src/utilities/: iocBasicObject.cpp  opcServer.cpp  opcserver.cpp  shutdown.cpp
